<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/faint_grey"
        android:orientation="vertical"
        android:padding="4dp"
        tools:context=".MainFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/sub_area"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <ImageView
                android:id="@+id/dev_image"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/main_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_book" />

            <TextView
                android:id="@+id/dev_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/dev_image"
                android:layout_toRightOf="@+id/dev_image"
                android:paddingTop="5dp"
                android:text="@string/daily_devotional"
                android:textColor="#7C8B88"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:text="@string/today" />

            <TextView
                android:id="@+id/verse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dev_heading"
                android:layout_toEndOf="@+id/dev_image"
                android:layout_toRightOf="@+id/dev_image"
                android:text="@string/verse"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dev_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dev_image"
                android:fontFamily="sans-serif"
                android:text="@string/dev_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/read_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dev_text"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="0dp"
                android:text="@string/read_more"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_main" />

        <TextView
            style="@style/content_title"
            android:text="@string/title_news_feed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                android:src="@drawable/feed_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/sub_area"
                android:fontFamily="sans-serif"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/text_news_feed"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            style="@style/content_title"
            android:text="@string/text_events" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/event1"
                    style="@style/event_thumb"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/event1" />

                <TextView
                    android:id="@+id/event1_text"
                    style="@style/event_name"
                    android:layout_below="@+id/event1"
                    android:layout_marginBottom="10dp"
                    android:text="Upcoming event" />

                <ImageView
                    android:id="@+id/event2"
                    style="@style/event_thumb"
                    android:layout_toEndOf="@+id/event1"
                    android:layout_toRightOf="@+id/event1"
                    android:src="@drawable/event2" />

                <TextView
                    android:id="@+id/event2_text"
                    style="@style/event_name"
                    android:layout_below="@+id/event3"
                    android:layout_toEndOf="@+id/event1_text"
                    android:layout_toRightOf="@+id/event1_text"
                    android:text="Men's Crusade" />

                <ImageView
                    android:id="@+id/event3"
                    style="@style/event_thumb"
                    android:layout_toEndOf="@+id/event2"
                    android:layout_toRightOf="@+id/event2"
                    android:src="@drawable/event3" />

                <TextView
                    android:id="@+id/event3_text"
                    style="@style/event_name"
                    android:layout_below="@+id/event3"
                    android:layout_toEndOf="@+id/event2_text"
                    android:layout_toRightOf="@+id/event2_text"
                    android:text="Youth Crusade" />

                <ImageView
                    android:id="@+id/event4"
                    style="@style/event_thumb"
                    android:layout_toEndOf="@+id/event3"
                    android:layout_toRightOf="@+id/event3"
                    android:src="@drawable/event4" />

                <TextView
                    android:id="@+id/event4_text"
                    style="@style/event_name"
                    android:layout_below="@+id/event3"
                    android:layout_toEndOf="@+id/event3_text"
                    android:layout_toRightOf="@+id/event3_text"
                    android:text="Worship Crusade" />

                <ImageView
                    android:id="@+id/event5"
                    style="@style/event_thumb"
                    android:layout_toEndOf="@+id/event4"
                    android:layout_toRightOf="@+id/event4"
                    android:src="@drawable/event5" />

                <TextView
                    android:id="@+id/event5_text"
                    style="@style/event_name"
                    android:layout_below="@+id/event5"
                    android:layout_toEndOf="@+id/event4_text"
                    android:layout_toRightOf="@+id/event4_text"
                    android:text="Healing Crusade" />
            </RelativeLayout>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>